--- a/agendaCRUD/css/illegal.css
+++ b/agendaCRUD/css/illegal.css
@@ -30,3 +30,14 @@
     margin-top: 2em;
     
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin-top: 80%;
+    text-align: center;
+    width: 100%;
+    background-color: rgb(71, 120, 145);
+    color: black;
+}
